--- a/android/src/main/res/layout/navigation_drawer_header.xml
+++ b/android/src/main/res/layout/navigation_drawer_header.xml
@@ -5,7 +5,7 @@
     xmlns:pkg="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorAccent">
+    android:background="@color/colorPrimaryDark">
 
     <ImageView
         android:id="@+id/navigation_drawer_header_background"
