--- a/android/src/main/res/values/colors.xml
+++ b/android/src/main/res/values/colors.xml
@@ -3,8 +3,8 @@
 
     <!-- Main Android colours -->
     <color name="colorPrimary">@color/main_xda_color</color>
-    <color name="colorPrimaryDark">@color/orange_900</color>
-    <color name="colorAccent">@color/indigo_a700</color>
+    <color name="colorPrimaryDark">@color/main_xda_color_dark</color>
+    <color name="colorAccent">#FF4081</color>
 
     <!-- Component colours -->
     <color name="fab_color">@color/colorAccent</color>
@@ -12,17 +12,19 @@
     <color name="navigation_drawer_icon">#8c000000</color>
 
     <!-- Custom/XDA colours -->
-    <color name="main_xda_color">#de7300</color>
+    <color name="main_xda_color">#3F51B5</color>
+    <color name="main_xda_color_dark">#303F9F</color>
     <color name="custom_accent_green">#12911D</color>
 
+    <color name="white">#fff</color>
     <color name="lighter_gray">#ddd</color>
     <color name="very_light_grey">#E0E0E0</color>
 
     <!-- Material Design Colours -->
-    <color name="orange_500">#ff9800</color>
-    <color name="orange_700">#f57C00</color>
-    <color name="orange_800">#ef6C00</color>
-    <color name="orange_900">#e65100</color>
+    <!--<color name="orange_500">#ff9800</color>-->
+    <!--<color name="orange_700">#f57C00</color>-->
+    <!--<color name="orange_800">#ef6C00</color>-->
+    <!--<color name="orange_900">#e65100</color>-->
 
     <color name="deep_purple_a700">#6200EA</color>
 
